DIYA-156 Use min-height for page into to prevent content overlapping on narrow screens

--- a/src/styles/v3/page-intro.scss
+++ b/src/styles/v3/page-intro.scss
@@ -1,12 +1,12 @@
 .page-intro {
-    height: calc(100vh - #{$navbar-height});
+    min-height: calc(100vh - #{$navbar-height});
 
     @include for-tablet {
-        height: calc(100vh - #{$navbar-height-tablet});
+        min-height: calc(100vh - #{$navbar-height-tablet});
     }
 
     @include for-phone {
-        height: calc(100vh - #{$navbar-height-phone});
+        min-height: calc(100vh - #{$navbar-height-phone});
     }
 
     display: flex;
